--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,3 +3,13 @@
     width: 100%;
     height: 100%;
   }
+
+.card-app-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+// .card-app-sorting {
+//     justify-content: flex-end;
+//     display: inline-flex;
+// }
